= NTPsec project news =

For historic news from NTP Classic, see devel/HISTORIC-NEWS in the
distribution.

Much of the traditional function of a news file is now better addressed
by browsing the comments in the revision history.  This file will focus
on user-visible changes.

== Repository Head ==

The code size has been further reduced, to 56KLOC.

ntpmon now reports units on time figures.

Builds are fully reproducible; see SOURCE_DATE_EPOCH and BUILD_EPOCH.

== 2017-03-21: 0.9.7 ==

The code size has been further reduced, to 60KLOC.

A shell script, buildprep, has been added to the top level source directory.
It prepares your system for an NTPsec source build by installing all required
dependencies on the build host.

Extra digits of precision are now output in numerous places.  The
driftfile now output 6 digits past the decimal point instead of 3.  The
stats files now output 9 digits past the decimal point instead of 6 for
some fields. ntpq and ntpmon also report extra digits of precision in
multiple places.  These changes may break simple parsing scripts.

Four contrib programs: cpu-temp-log; smartctl-temp-log, temper-temp-log,
and zone-temp-log; have been combined into the new program ntplogtemp.
The new program allows for easy logging of system temperatures and is
installed by default.

The SHM refclock no longer limits the value of SHM time by default.
This allows SHM to work on systems with no RTC by default.

The following CVEs revealed by a Mozilla penetration test and reported in
CERT VU#325339 have been resolved:

CVE-2017-6464: Denial of Service via Malformed Config
CVE-2017-6463: Authenticated DoS via Malicious Config Option
CVE-2017-6458: Potential Overflows in ctl_put() functions
CVE-2017-6451: Improper use of snprintf() in mx4200_send()

The following CVEs, announced simultaneously, affected NTP Classic but
not NTPsec, because we had already removed the attack surface:

CVE-2017-6462: Buffer Overflow in DPTS Clock